--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "shoeshop",
   "version": "0.1.0",
-  "proxy": "https://tegs-store.herokuapp.com/",
+  "proxy": "http://localhost:1000/",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.20.2",
     "axios": "^0.24.0",
     "ethers": "^5.6.5",
     "moment": "^2.29.1",
@@ -16,7 +14,6 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-moralis": "^1.3.5",
-    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^5.3.0",
