--- a/package.json
+++ b/package.json
@@ -10,20 +10,16 @@
     "axios": "^0.24.0",
     "ethers": "^5.6.5",
     "moment": "^2.29.1",
-    "moralis": "^1.6.0",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-dom": "^18.1.0",
-    "react-moralis": "^1.3.5",
-    "react-redux": "^7.2.6",
-    "react-router": "^6.0.2",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
-    "web-vitals": "^1.1.2",
-    "web3": "^1.7.3"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
