--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shoeshop",
   "version": "0.1.0",
-  "proxy": "http://localhost:1000/",
+  "proxy": "https://tegs-store.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
